# oqtepalavash-bot-API

./: .gitignore  Makefile  OqtepalavashBot.sqlite3  pyproject.toml
apps/: urls.py
apps/company/: serializers.py  urls.py  views.py
apps/company/fixtures/: about.yaml  branch.yaml  location.yaml  phone.yaml  region.yaml  settings.yaml  social.yaml
apps/company/migrations/: 0001_initial.py
apps/company/models/: __init__.py  company.py  place.py
apps/orders/: models.py
apps/products/migrations/: 0001_initial.py
apps/products/models/: category.py  product.py
apps/users/: models.py  urls.py
apps/users/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py  0002_user_language.py  0003_alter_user_city_alter_user_language_alter_user_phone.py
apps/users/models/: __init__.py  addition.py  user.py
apps/users/serializers/: __init__.py  user.py
apps/users/views/: user.py
root/: settings.py  settings_dev.py  settings_jazzmin.py  urls.py
