[tool.poetry]
name = "oqtepalavash-bot-api"
version = "0.1.0"
description = ""
authors = ["khasanjon <khasanjon.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
isort = "^5.12.0"
python-dotenv = "^1.0.0"

[tool.isort]
skip = "migrations, __init__.py"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
